# project_demo

./: .gitignore
api/: .env  Dockerfile  app.py  app_factory.py  commands.py  entrypoint.sh  pyproject.toml  test.py  test.sh
api/common/: errors.py
api/configs/: __init__.py  app_config.py  pydantic_config.py
api/controllers/internal/: __init__.py  home.py
api/decorator/: login.py
api/docker/: entrypoint.sh
api/extensions/: ext_app_metrics.py  ext_blueprints.py  ext_celery.py  ext_commands.py  ext_database.py  ext_login.py  ext_migrate.py
api/models/: __init__.py  account.py
api/overriding/: base_value_error.py  exception_handling.py
api/schedule/: output_time.py
api/tasks/: addition.py
api/utils/: u_jwt_processor.py
docker/: docker-compose.yaml
