[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4==0.0.1",
    "celery==5.5.3",
    "flask==3.1.0",
    "flask-compress~=1.17",
    "flask-cors==6.0.0",
    "flask-login==0.6.3",
    "flask-migrate==4.0.7",
    "flask-restful==0.3.10",
    "flask-sqlalchemy==3.1.1",
    "gevent==24.11.1",
    "gunicorn==23.0.0",
    "markdown~=3.5.1",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "pandas[excel,output-formatting,performance]==2.2.2",
    "psycopg2-binary~=2.9.6",
    "pydantic-settings~=2.9.1",
    "pyjwt==2.8.0",
    "pyyaml==6.0.1",
    "requests>=2.32.4",
    "sqlalchemy==2.0.41",
]
